--- a/po/uk_UA.po
+++ b/po/uk_UA.po
@@ -1,6 +1,6 @@
 # Ukrainian translation for BoxBuddy.
 # Copyright (C) 2024 THE BoxBuddy'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the BoxBuddy package.
 # volkov <volkovissocool@gmail.com>, 2024.
 #
 msgid ""
