Restored pot comments

--- a/po/boxbuddy.pot
+++ b/po/boxbuddy.pot
@@ -17,6 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#. Button Label
 #: src/main.rs:83
 msgid "Create A Distrobox"
 msgstr ""
@@ -25,6 +26,7 @@ msgstr ""
 msgid "About BoxBuddy"
 msgstr ""
 
+#. Error Message
 #: src/main.rs:106
 msgid "Distrobox not found!"
 msgstr ""
@@ -37,18 +39,22 @@ msgstr ""
 msgid "Open Terminal"
 msgstr ""
 
+#. Button
 #: src/main.rs:207
 msgid "Upgrade Box"
 msgstr ""
 
+#. Button
 #: src/main.rs:222
 msgid "View Applications"
 msgstr ""
 
+#. Button
 #: src/main.rs:235
 msgid "Delete Box"
 msgstr ""
 
+#. Button Tooltip
 #: src/main.rs:259
 msgid "Create New Distrobox"
 msgstr ""
@@ -61,6 +67,7 @@ msgstr ""
 msgid "Cancel"
 msgstr ""
 
+#. Label - name of new Distrobox
 #: src/main.rs:291
 msgid "Name"
 msgstr ""
@@ -69,18 +76,22 @@ msgstr ""
 msgid "Home Directory (Leave blank for default)"
 msgstr ""
 
+#. Label - Container image for new Distrobox
 #: src/main.rs:339
 msgid "Image"
 msgstr ""
 
+#. Button
 #: src/main.rs:445
 msgid "Installed Applications"
 msgstr ""
 
+#. Message
 #: src/main.rs:454
 msgid "Loading..."
 msgstr ""
 
+#. Error Message
 #: src/main.rs:483
 msgid "No Applications Installed"
 msgstr ""
@@ -89,6 +100,7 @@ msgstr ""
 msgid "Available Applications"
 msgstr ""
 
+#. Button - Execute an application in a box
 #: src/main.rs:498
 msgid "Run"
 msgstr ""
@@ -97,10 +109,12 @@ msgstr ""
 msgid "Remove From Menu"
 msgstr ""
 
+#. Button
 #: src/main.rs:529
 msgid "Add To Menu"
 msgstr ""
 
+#. Success Message
 #: src/main.rs:559
 msgid "App Exported!"
 msgstr ""
@@ -109,38 +123,47 @@ msgstr ""
 msgid "App Removed!"
 msgstr ""
 
+#. Confirmation Message - has box name appended at the end
 #: src/main.rs:572
 msgid "Are you sure you want to delete "
 msgstr ""
 
+#. Confirmation Message
 #: src/main.rs:575
 msgid "Really Delete?"
 msgstr ""
 
+#. Button
 #: src/main.rs:580
 msgid "Delete"
 msgstr ""
 
+#. Success Message
 #: src/main.rs:592
 msgid "Box Deleted!"
 msgstr ""
 
+#. Error Message - has list of supported terminals appended
 #: src/main.rs:614
 msgid "Please install one of the supported terminals:"
 msgstr ""
 
+#. Error message
 #: src/main.rs:618
 msgid "No supported terminal found"
 msgstr ""
 
+#. Button
 #: src/main.rs:622
 msgid "Ok"
 msgstr ""
 
+#. Error Message
 #: src/main.rs:634
 msgid "No Boxes"
 msgstr ""
 
+#. Help Text
 #: src/main.rs:636
 msgid "Click the + at the top-left to create your first box!"
 msgstr ""
