--- a/po/it_IT/LC_MESSAGES/it_IT.po
+++ b/po/it_IT/LC_MESSAGES/it_IT.po
@@ -1,14 +1,14 @@
-# SOME DESCRIPTIVE TITLE.
+# ITALIAN TRANSLATION.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# ALBANO BATTISTELLA <ALBANOBATTISTELLA@GMAIL.COM>, 2024.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: boxbuddyRS\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-01-18 13:34+0000\n"
-"PO-Revision-Date: 2024-01-18 14:48+0100\n"
+"PO-Revision-Date: 2024-01-27 17:00+0100\n"
 "Last-Translator: Albano Battistella <albanobattistella@gmail.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -126,10 +126,9 @@ msgstr "App esportata!"
 
 # Success Message
 #: src/main.rs:564
-#, fuzzy
 #| msgid "App Exported!"
 msgid "App Removed!"
-msgstr "App esportata!"
+msgstr "App rimossa!"
 
 # Confirmation Message - has box name appended at the end
 #: src/main.rs:572
