--- a/po/pt_BR/LC_MESSAGES/pt_BR.po
+++ b/po/pt_BR/LC_MESSAGES/pt_BR.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-02-08 18:41+0000\n"
-"PO-Revision-Date: 2024-02-15 22:49-0300\n"
+"PO-Revision-Date: 2024-02-15 22:52-0300\n"
 "Last-Translator: Luiz Lima\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -227,7 +227,7 @@ msgstr "Sem Caixas"
 #: src/main.rs:912
 msgid "Click the + at the top-left to create your first box!"
 msgstr ""
-"Pressione no + no canto esquerdo superior para criar sua primeira caixa!"
+"Pressione no + no canto superior esquerdo para criar sua primeira caixa!"
 
 #. TRANSLATORS: Error / Info Message
 #: src/main.rs:924
