--- a/po/de_DE/LC_MESSAGES/de_DE.po
+++ b/po/de_DE/LC_MESSAGES/de_DE.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-02-20 10:26+0000\n"
-"PO-Revision-Date: 2024-02-20 11:36+0100\n"
+"PO-Revision-Date: 2024-02-20 11:44+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -40,7 +40,7 @@ msgstr "Menü"
 #. TRANSLATORS: Menu Item
 #: src/main.rs:230
 msgid "Refresh"
-msgstr "Aktuallisieren"
+msgstr "Aktualisieren"
 
 #. TRANSLATORS: Menu Item
 #: src/main.rs:236
